# int-date-vs-struct-date

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt
benchmark/source/: benchmark.cpp
cmake/: dev-mode.cmake  gbenchmark.cmake
source/: CMakeLists.txt  date_common_functions.hpp  date_helper.hpp  date_v1.hpp  date_v2.hpp  date_v3.hpp  legacy_date_helper.hpp
test/: CMakeLists.txt
test/source/: date_common_test.cpp  date_test.cpp  date_v1_test.cpp  date_v2_test.cpp  date_v3_test.cpp
